--- a/apps/docs/content/components/Footnotes.mdx
+++ b/apps/docs/content/components/Footnotes.mdx
@@ -165,10 +165,10 @@ import {Footnotes} from '@primer/react-brand'
 
 ### Footnotes <Label>Required</Label>
 
-| name                  | type                                                     | default       | required | description                                                  |
-| --------------------- | -------------------------------------------------------- | ------------- | -------- | ------------------------------------------------------------ |
-| `as`                  | <PropTableValues values={['ol', 'div']} addLineBreaks /> | `'ol'`        | `false`  | Determines the underlying HTML element                       |
-| `visuallyHiddenTitle` | `string`                                                 | `'Footnotes'` | `false`  | Visually hidden title, which introduces the footnote content |
+| name                    | type                                                     | default       | required | description                                                  |
+| ----------------------- | -------------------------------------------------------- | ------------- | -------- | ------------------------------------------------------------ |
+| `as`                    | <PropTableValues values={['ol', 'div']} addLineBreaks /> | `'ol'`        | `false`  | Determines the underlying HTML element                       |
+| `visuallyHiddenHeading` | `string`                                                 | `'Footnotes'` | `false`  | Visually hidden title, which introduces the footnote content |
 
 ### Footnotes.Item <Label>Required</Label>
 
