update docs heading
Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>

--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -226,7 +226,7 @@ A heading element must be present as it serves as a navigation hook for assistiv
 </LogoSuite>
 ```
 
-### Heading with explicit level
+### Alternative heading levels
 
 Heading elements will default to being `h2` elements. Use the `as` prop to change the level of the heading.
 
