--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -11,7 +11,6 @@ import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
 import {Label} from '@primer/react'
-import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../../src/components'
 
 ```js
@@ -206,6 +205,39 @@ A heading element must be present as it serves as a navigation hook for assistiv
   <LogoSuite.Heading visuallyHidden>
     The ultimate developer experience is here.
   </LogoSuite.Heading>
+  <LogoSuite.Logobar>
+    <svg role="img" viewBox="0 0 300 100">
+      <title>Placeholder logo</title>
+      <rect width="100%" height="100%" />
+    </svg>
+    <svg role="img" viewBox="0 0 300 100">
+      <title>Placeholder logo</title>
+      <rect width="100%" height="100%" />
+    </svg>
+    <svg role="img" viewBox="0 0 300 100">
+      <title>Placeholder logo</title>
+      <rect width="100%" height="100%" />
+    </svg>
+    <svg role="img" viewBox="0 0 300 100">
+      <title>Placeholder logo</title>
+      <rect width="100%" height="100%" />
+    </svg>
+  </LogoSuite.Logobar>
+</LogoSuite>
+```
+
+### Alternative heading levels
+
+Heading elements will default to being `h2` elements. Use the `as` prop to change the level of the heading.
+
+```jsx live
+<LogoSuite>
+  <LogoSuite.Heading as="h4">
+    The ultimate developer experience is here.
+  </LogoSuite.Heading>
+  <LogoSuite.Description>
+    The heading above is rendered as a h4
+  </LogoSuite.Description>
   <LogoSuite.Logobar>
     <svg role="img" viewBox="0 0 300 100">
       <title>Placeholder logo</title>
