Add support for duotone text with span elements by default

--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -186,18 +186,18 @@ import {River, RiverBreakout} from '@primer/react-brand'
     trailingComponent={() => (
       <Timeline>
         <Timeline.Item>
-          <em>GitHub Codespaces</em> offers a complete dev environment in
+          <span>GitHub Codespaces</span> offers a complete dev environment in
           seconds.
         </Timeline.Item>
         <Timeline.Item>
-          <em>GitHub Copilot</em> is your AI pair programmer that empowers you
-          to complete tasks.
+          <span>GitHub Copilot</span> is your AI pair programmer that empowers
+          you to complete tasks.
         </Timeline.Item>
       </Timeline>
     )}
   >
     <Text>
-      <em>This first sentence is a river breakout headline.</em> And this is
+      <span>This first sentence is a river breakout headline.</span> And this is
       where the body copy starts. Remember to keep these nice and succinct.
     </Text>
     <Link href="#">Call to action</Link>
