add footnotes interface guidelines

--- a/apps/docs/content/components/Footnotes/react.mdx
+++ b/apps/docs/content/components/Footnotes/react.mdx
@@ -7,8 +7,10 @@ description: Use footnotes to display contextual information and cite sources in
 ---
 
 import {Label} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 import {Link} from '@primer/react-brand'
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 ```js
 import {Footnotes} from '@primer/react-brand'
