--- a/apps/docs/content/components/Footnotes/index.mdx
+++ b/apps/docs/content/components/Footnotes/index.mdx
@@ -17,7 +17,7 @@ import dontUseDisclaimer from './images/dont-use-disclaimer.png'
 
 <img
   src={anatomy}
-  alt="Footnotes with location-based annotations for heading, description, leading visual and link groups"
+  alt="Footnotes as an ordered list of citations, with visual indicators marking items and return urls"
 />
 
 ## Usage
