--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -186,19 +186,28 @@ import {River, RiverBreakout} from '@primer/react-brand'
     trailingComponent={() => (
       <Timeline>
         <Timeline.Item>
-          <span>GitHub Codespaces</span> offers a complete dev environment in
-          seconds.
+          <DuotoneText>
+            <DuotoneText.Emphasis>GitHub Codespaces</DuotoneText.Emphasis>{' '}
+            offers a complete dev environment in seconds.
+          </DuotoneText>
         </Timeline.Item>
         <Timeline.Item>
-          <span>GitHub Copilot</span> is your AI pair programmer that empowers
-          you to complete tasks.
+          <DuotoneText>
+            <DuotoneText.Emphasis>GitHub Copilot</DuotoneText.Emphasis> is your
+            AI pair programmer that empowers you to complete tasks.
+          </DuotoneText>
         </Timeline.Item>
       </Timeline>
     )}
   >
     <Text>
-      <span>This first sentence is a river breakout headline.</span> And this is
-      where the body copy starts. Remember to keep these nice and succinct.
+      <DuotoneText>
+        <DuotoneText.Emphasis>
+          This first sentence is a river breakout headline.
+        </DuotoneText.Emphasis>{' '}
+        And this is where the body copy starts. Remember to keep these nice and
+        succinct.
+      </DuotoneText>
     </Text>
     <Link href="#">Call to action</Link>
   </RiverBreakout.Content>
