--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -189,7 +189,7 @@ Limit supplemental content to a maximum of 500 characters or two timeline items 
 
 ### River story scroll
 
-A river story scroll component is used to compose rivers and and create a dynamic, scroll-driven presentation. It's a great way to showcase a set of features or topics in an interactive and visually engaging way.
+A river story scroll component is used to compose rivers and create a dynamic, scroll-driven presentation. It's a great way to showcase a set of features or topics in an interactive and visually engaging way.
 
 #### Composition
 
