Use a <b> element instead of <span>

--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -186,28 +186,19 @@ import {River, RiverBreakout} from '@primer/react-brand'
     trailingComponent={() => (
       <Timeline>
         <Timeline.Item>
-          <DuotoneText>
-            <DuotoneText.Emphasis>GitHub Codespaces</DuotoneText.Emphasis>{' '}
-            offers a complete dev environment in seconds.
-          </DuotoneText>
+          <span>GitHub Codespaces</span> offers a complete dev environment in
+          seconds.
         </Timeline.Item>
         <Timeline.Item>
-          <DuotoneText>
-            <DuotoneText.Emphasis>GitHub Copilot</DuotoneText.Emphasis> is your
-            AI pair programmer that empowers you to complete tasks.
-          </DuotoneText>
+          <span>GitHub Copilot</span> is your AI pair programmer that empowers
+          you to complete tasks.
         </Timeline.Item>
       </Timeline>
     )}
   >
     <Text>
-      <DuotoneText>
-        <DuotoneText.Emphasis>
-          This first sentence is a river breakout headline.
-        </DuotoneText.Emphasis>{' '}
-        And this is where the body copy starts. Remember to keep these nice and
-        succinct.
-      </DuotoneText>
+      <span>This first sentence is a river breakout headline.</span> And this is
+      where the body copy starts. Remember to keep these nice and succinct.
     </Text>
     <Link href="#">Call to action</Link>
   </RiverBreakout.Content>
