--- a/apps/docs/content/components/Timeline.mdx
+++ b/apps/docs/content/components/Timeline.mdx
@@ -43,22 +43,22 @@ Timeline requires the `dir` attribute to be set on the `<html>` element to ensur
 
 ### With emphasis
 
-Use a `<span>` element within the timeline items to apply a duotone style and emphasize part of the text.
+Use a `<b>` element within the timeline items to apply a duotone style and emphasize part of the text.
 
 ```jsx live
 <Timeline>
   <Timeline.Item>
-    <span>GitHub Codespaces</span> offers a complete dev environment in seconds,
-    so you can code, build, test, and open pull requests from any repo anywhere.
+    <b>GitHub Codespaces</b> offers a complete dev environment in seconds, so
+    you can code, build, test, and open pull requests from any repo anywhere.
   </Timeline.Item>
   <Timeline.Item>
-    <span>GitHub Copilot</span> is your AI pair programmer that empowers you to
+    <b>GitHub Copilot</b> is your AI pair programmer that empowers you to
     complete tasks 55% faster by turning natural language prompts into coding
     suggestions.
   </Timeline.Item>
   <Timeline.Item>
-    <span>GitHub Actions</span> automates your build, test, and deployment
-    workflow with simple and secure CI/CD.
+    <b>GitHub Actions</b> automates your build, test, and deployment workflow
+    with simple and secure CI/CD.
   </Timeline.Item>
 </Timeline>
 ```
