update SubNav docs to clarify SubNav.Heading behaviour

--- a/apps/docs/content/components/SubNav.mdx
+++ b/apps/docs/content/components/SubNav.mdx
@@ -99,6 +99,8 @@ import {SubNav} from '@primer/react-brand'
 
 ### SubNav.Heading <Label>Required</Label>
 
+`SubNav.Heading` is a styled `a` tag which describes the overarching category of the other links within the SubNav. The `SubNav.Heading` is structurally identical to a `SubNav.Link` and differs only in visual styling.
+
 | name   | type     | default | required | description                      |
 | ------ | -------- | ------- | -------- | -------------------------------- |
 | `href` | `string` |         |          | URL of the page the link goes to |
