Add support for duotone text with <b> elements by default (#722)

--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -186,19 +186,18 @@ import {River, RiverBreakout} from '@primer/react-brand'
     trailingComponent={() => (
       <Timeline>
         <Timeline.Item>
-          <em>GitHub Codespaces</em> offers a complete dev environment in
-          seconds.
+          <b>GitHub Codespaces</b> offers a complete dev environment in seconds.
         </Timeline.Item>
         <Timeline.Item>
-          <em>GitHub Copilot</em> is your AI pair programmer that empowers you
-          to complete tasks.
+          <b>GitHub Copilot</b> is your AI pair programmer that empowers you to
+          complete tasks.
         </Timeline.Item>
       </Timeline>
     )}
   >
     <Text>
-      <em>This first sentence is a river breakout headline.</em> And this is
-      where the body copy starts. Remember to keep these nice and succinct.
+      <b>This first sentence is a river breakout headline.</b> And this is where
+      the body copy starts. Remember to keep these nice and succinct.
     </Text>
     <Link href="#">Call to action</Link>
   </RiverBreakout.Content>
