add autocomplete attribute to relevant TextInputs

--- a/apps/docs/content/components/CTAForm/react.mdx
+++ b/apps/docs/content/components/CTAForm/react.mdx
@@ -32,7 +32,7 @@ import {CTAForm} from '@primer/react-brand'
   <CTAForm.Input>
     <FormControl required>
       <FormControl.Label>Your work email address</FormControl.Label>
-      <TextInput placeholder="name" />
+      <TextInput placeholder="email" autoComplete="email" />
     </FormControl>
   </CTAForm.Input>
   <CTAForm.Confirm>
@@ -58,7 +58,7 @@ import {CTAForm} from '@primer/react-brand'
   <CTAForm.Input>
     <FormControl required>
       <FormControl.Label>Your work email address</FormControl.Label>
-      <TextInput placeholder="name" />
+      <TextInput placeholder="email" autoComplete="email" />
     </FormControl>
   </CTAForm.Input>
   <CTAForm.Action>Subscribe</CTAForm.Action>
@@ -72,7 +72,7 @@ import {CTAForm} from '@primer/react-brand'
   <CTAForm.Input onChange={() => console.log('onChange event triggered')}>
     <FormControl required>
       <FormControl.Label>Your work email address</FormControl.Label>
-      <TextInput placeholder="name" />
+      <TextInput placeholder="email" autoComplete="email" />
     </FormControl>
   </CTAForm.Input>
   <CTAForm.Action>Subscribe</CTAForm.Action>
