--- a/apps/docs/content/components/FormControl.mdx
+++ b/apps/docs/content/components/FormControl.mdx
@@ -26,7 +26,7 @@ import {FormControl} from '@primer/react-brand'
 ```jsx live
 <FormControl>
   <FormControl.Label>Name</FormControl.Label>
-  <TextInput />
+  <TextInput autoComplete="name" />
 </FormControl>
 ```
 
@@ -106,11 +106,11 @@ An example of a typical layout composed using `FormControl`:
       </FormControl>
       <FormControl fullWidth required>
         <FormControl.Label>First name</FormControl.Label>
-        <TextInput required />
+        <TextInput required autoComplete="given-name" />
       </FormControl>
       <FormControl fullWidth required>
         <FormControl.Label>Last name</FormControl.Label>
-        <TextInput required />
+        <TextInput required autoComplete="family-name" />
       </FormControl>
     </Container>
 
@@ -217,7 +217,7 @@ An example of a typical layout composed using `FormControl`:
 ```jsx live
 <FormControl>
   <FormControl.Label visuallyHidden>Name</FormControl.Label>
-  <TextInput />
+  <TextInput autoComplete="name" />
 </FormControl>
 ```
 
@@ -300,7 +300,7 @@ Pass the `fullWidth` prop to `FormControl` to provide additional behavior and st
 ```jsx live
 <FormControl fullWidth>
   <FormControl.Label>Name</FormControl.Label>
-  <TextInput />
+  <TextInput autoComplete="name" />
 </FormControl>
 ```
 
@@ -329,7 +329,7 @@ Pass the `required` prop to `FormControl` to provide additional behavior and sta
 ```jsx live
 <FormControl required>
   <FormControl.Label>Name</FormControl.Label>
-  <TextInput />
+  <TextInput autoComplete="name" />
 </FormControl>
 ```
 
@@ -360,7 +360,11 @@ const App = () => {
       >
         <FormControl fullWidth>
           <FormControl.Label>Name</FormControl.Label>
-          <TextInput ref={inputRef} defaultValue="Mona Lisa" />
+          <TextInput
+            ref={inputRef}
+            defaultValue="Mona Lisa"
+            autoComplete="name"
+          />
         </FormControl>
         <Button type="submit" variant="primary">
           Submit
