modify TextInput documentation to not encourage placeholder use as label

--- a/apps/docs/content/components/TextInput.mdx
+++ b/apps/docs/content/components/TextInput.mdx
@@ -86,20 +86,6 @@ import {TextInput} from '@primer/react-brand'
 </Container>
 ```
 
-### Placeholder
-
-```jsx live
-<TextInput placeholder="First name" autoComplete="given-name" />
-```
-
-### Autocomplete
-
-The `autoComplete` prop should be provided wherever possible to allow browsers to autofill the input field. See MDN for [a complete list of autocomplete values](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/autocomplete).
-
-```jsx live
-<TextInput autoComplete="given-name" />
-```
-
 ### Use with `FormControl`
 
 Use `TextInput` alongside `FormControl` to ensure the control always has a corresponding form label.
@@ -111,6 +97,23 @@ Use `TextInput` alongside `FormControl` to ensure the control always has a corre
   <FormControl.Label>First name</FormControl.Label>
   <TextInput autoComplete="given-name" />
 </FormControl>
+```
+
+### Placeholder
+
+```jsx live
+<FormControl fullWidth>
+  <FormControl.Label>First name</FormControl.Label>
+  <TextInput placeholder="Mona" autoComplete="given-name" />
+</FormControl>
+```
+
+### Autocomplete
+
+The `autoComplete` prop should be provided wherever possible to allow browsers to autofill the input field. See MDN for [a complete list of autocomplete values](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/autocomplete).
+
+```jsx live
+<TextInput autoComplete="given-name" />
 ```
 
 ### Validation
