TextInput accessibility fixes (#776)
* add autocomplete attribute to relevant TextInputs

* update TextInput docs to explicity mention autoComplete attribute

* add aria-describedby to TextInput

* add tests to TextInput

* modify TextInput documentation to not encourage placeholder use as label

* remove validation prop from TextInput stories

* add aria-labels to TextInput leadingVisual and trailingVisual icons in Storybook

* add changeset

* github-actions[bot] Regenerated snapshots

---------

Co-authored-by: joshfarrant <joshfarrant@users.noreply.github.com>

--- a/apps/docs/content/components/TextInput.mdx
+++ b/apps/docs/content/components/TextInput.mdx
@@ -45,11 +45,19 @@ import {TextInput} from '@primer/react-brand'
   </FormControl>
   <FormControl fullWidth>
     <FormControl.Label>Email</FormControl.Label>
-    <TextInput type="email" placeholder="mona@github.com" />
+    <TextInput
+      type="email"
+      autoComplete="email"
+      placeholder="mona@github.com"
+    />
   </FormControl>
   <FormControl fullWidth>
     <FormControl.Label>Password</FormControl.Label>
-    <TextInput type="password" value="monalisa" />
+    <TextInput
+      type="password"
+      autoComplete="current-password"
+      value="monalisa"
+    />
   </FormControl>
   <FormControl fullWidth>
     <FormControl.Label>Month</FormControl.Label>
@@ -57,7 +65,7 @@ import {TextInput} from '@primer/react-brand'
   </FormControl>
   <FormControl fullWidth>
     <FormControl.Label>Telephone</FormControl.Label>
-    <TextInput type="tel" />
+    <TextInput type="tel" autoComplete="tel" />
   </FormControl>
   <FormControl fullWidth>
     <FormControl.Label>Time</FormControl.Label>
@@ -73,15 +81,9 @@ import {TextInput} from '@primer/react-brand'
   </FormControl>
   <FormControl fullWidth>
     <FormControl.Label>URL</FormControl.Label>
-    <TextInput type="url" value="https://github.com" />
+    <TextInput type="url" autoComplete="url" value="https://github.com" />
   </FormControl>
 </Container>
-```
-
-### Placeholder
-
-```jsx live
-<TextInput placeholder="First name" />
 ```
 
 ### Use with `FormControl`
@@ -93,8 +95,25 @@ Use `TextInput` alongside `FormControl` to ensure the control always has a corre
 ```jsx live
 <FormControl>
   <FormControl.Label>First name</FormControl.Label>
-  <TextInput />
+  <TextInput autoComplete="given-name" />
 </FormControl>
+```
+
+### Placeholder
+
+```jsx live
+<FormControl fullWidth>
+  <FormControl.Label>First name</FormControl.Label>
+  <TextInput placeholder="Mona" autoComplete="given-name" />
+</FormControl>
+```
+
+### Autocomplete
+
+The `autoComplete` prop should be provided wherever possible to allow browsers to autofill the input field. See MDN for [a complete list of autocomplete values](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/autocomplete).
+
+```jsx live
+<TextInput autoComplete="given-name" />
 ```
 
 ### Validation
