--- a/apps/docs/content/components/FormControl.mdx
+++ b/apps/docs/content/components/FormControl.mdx
@@ -49,15 +49,13 @@ import {FormControl} from '@primer/react-brand'
   {/* Checkbox */}
   <FormControl>
     <Checkbox />
-    <FormControl.Label>
-      Checkbox <FormControl.Hint>With an optional message</FormControl.Hint>
-    </FormControl.Label>
+    <FormControl.Label>Checkbox</FormControl.Label>
+    <FormControl.Hint>With an optional message</FormControl.Hint>
   </FormControl>
   {/* Radio */}
   <FormControl>
-    <FormControl.Label>
-      Radio <FormControl.Hint>With an optional message</FormControl.Hint>
-    </FormControl.Label>
+    <FormControl.Label>Radio</FormControl.Label>
+    <FormControl.Hint>With an optional message</FormControl.Hint>
     <Radio />
   </FormControl>
   {/* Textarea */}
@@ -138,21 +136,21 @@ An example of a typical layout composed using `FormControl`:
     <FormControl hasBorder required>
       <Checkbox />
       <FormControl.Label>
-        Contact me about GitHub Enterprise Server{' '}
-        <FormControl.Hint>
-          <Text size="200" variant="muted">
-            I&apos;m interested in learning more about{' '}
-            <InlineLink
-              size="200"
-              href="https://github.com/enterprise"
-              target="_blank"
-            >
-              GitHub Enterprise Server
-            </InlineLink>{' '}
-            and would like to be contacted by GitHub’s sales team.
-          </Text>
-        </FormControl.Hint>
+        Contact me about GitHub Enterprise Server
       </FormControl.Label>
+      <FormControl.Hint>
+        <Text size="200" variant="muted">
+          I&apos;m interested in learning more about{' '}
+          <InlineLink
+            size="200"
+            href="https://github.com/enterprise"
+            target="_blank"
+          >
+            GitHub Enterprise Server
+          </InlineLink>{' '}
+          and would like to be contacted by GitHub’s sales team.
+        </Text>
+      </FormControl.Hint>
     </FormControl>
     <Container
       sx={{
