--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -39,7 +39,7 @@ The Section component is a semantic element used to create a new section within 
 
 Use different backgrounds and paddings to visually differentiate different sections within a page, aiding in content hierarchy and navigation.
 
-###	Grids and responsive Design 
+###	Grids and responsive design 
 
 The container maintains content margins and allows the use of the Grid to consistently align elements across different viewport sizes.
 
