--- a/apps/docs/content/components/Section/react.mdx
+++ b/apps/docs/content/components/Section/react.mdx
@@ -34,7 +34,7 @@ The default `Section` wraps its content in a semantic `<section>` element and pr
 </Section>
 ```
 
-### With indepenedent block paddings
+### With independent block paddings
 
 ```jsx live
 <Section paddingBlockStart="none" paddingBlockEnd="spacious">
